Fix standings table records splitting to multiple lines on mobile

--- a/src/components/pages/standings/Standings.css
+++ b/src/components/pages/standings/Standings.css
@@ -9,6 +9,14 @@
     cursor: pointer;
 }
 
+.standingsTable .recordThreeValues {
+    min-width: 4em;
+}
+
+.standingsTable .recordFourValues {
+    min-width: 5em;
+}
+
 .standingsTable .clinchedSpot {
     --size: 1.5em;
     min-width: var(--size);
